Fourier Transformation and Pade Approximation work.

--- a/eval_template.yaml
+++ b/eval_template.yaml
@@ -1,13 +1,15 @@
 DESCRIPTION: '>'
 DIPOLE:
-- dipole.dat
+- dipole_k100.dat
+- dipole_k010.dat
+- dipole_k001.dat
 EXCIT: laser_profile.dat
 OPT:
   FitSpectrum:
     fit: false
-    fit_guess: true
+    fit_guess: false
   FourierTransform:
-    fourier: false
+    fourier: true
     min_pw: 17
     smooth: 0
     window: 0
