--- a/eval.yaml
+++ b/eval.yaml
@@ -7,25 +7,43 @@ EXCIT: laser_profile.dat
 OPT:
   FitSpectrum:
     fit: true
-    fit_guess: false
+    fit_guess: true
+    guess_thres: 10
+    fit_range:
+    - 0.1
+    - 0.5
   FourierTransform:
-    fourier: true
+    fourier: false
     min_pw: 17
     smooth: 0
     window: 0
   PadeApprox:
-    pade: true
+    pade: false
     pade_dw: 1.0e-05
     pade_smooth: 1.0e-07
     pade_thin: 0
     pade_wmax: 0.6
 SPEC:
   excitations:
-    energies:
-    - 0
+  - energy: 0.2
+    fix: false
+    name: S1
+    phase: 0.05
+    strength: 0.1
+    transdip: #the transition dipole vector is unnormalized!!
+    - 0.0
+    - 0.1
     - 0.2
-    - 0.5
-    strenghts:
-    - 0
-    - 0.2
+  - energy: 0.15
+    fix: true
+    name: S2
+    phase: 0.04
+    strength: 0.12
+    transdip:
+    - 0.0
+    - 0.3
     - 0.4
+  fit_abserr: 1.0e-12
+  fit_referr: 0.0001
+  fit_relerr: 1.0e-08
+  nex: 2
