Iterativen Fit eingefuehrt

--- a/eval.yaml
+++ b/eval.yaml
@@ -10,6 +10,8 @@ OPT:
     fit: true
     fit_guess: true
     guess_thres: 0.05
+    fit_relerr_crit: 0.1
+    fit_max_iter: 30
     fit_range:
     - 0.1
     - 0.5
