In- and output for excitation lines done.

--- a/eval.yaml
+++ b/eval.yaml
@@ -27,26 +27,69 @@ OPT:
     pade_thin: 0
     pade_wmax: 0.6
 SPEC:
+  nex: 4
   excitations:
-  - energy: 0.2
+  - name: S1
     fix: false
-    name: S1
-    phase: 0.05
-    strength: 0.1
-    transdip: #the transition dipole vector is unnormalized!!
+    energy: 0.22604561723950442
+    strength: 0.016855504240234572
+    amplitude_file1:
+    - 0.003275404051270611
+    - 0.0003950728917067939
+    - 0.006475085778662061
+    amplitude_file2:
+    - 0.00038641993586937347
+    - 5.1149609515033444e-05
+    - 0.0008120485934047347
+    amplitude_file3:
+    - 0.006484755627272246
+    - 0.0008014857128177774
+    - 0.013607844637491878
+  - name: S2
+    fix: false
+    energy: 0.2432180738100489
+    strength: 0.279089352293315
+    amplitude_file1:
+    - 0.09973636019763744
+    - 0.0036100696292732676
+    - 0.133762037609501
+    amplitude_file2:
+    - 0.003646927367537331
+    - 0.00013238971665478528
+    - 0.004868404473165539
+    amplitude_file3:
+    - 0.1337167377451227
+    - 0.004889546185522697
+    - 0.1789755495925394
+  - name: S3
+    fix: false
+    energy: 0.2481291430301331
+    strength: 0.00408490507065865
+    amplitude_file1:
     - 0.0
-    - 0.1
-    - 0.2
-  - energy: 0.15
-    fix: true
-    name: S2
-    phase: 0.04
-    strength: 0.12
-    transdip:
     - 0.0
-    - 0.3
-    - 0.4
-  fit_abserr: 1.0e-12
-  fit_referr: 0.0001
-  fit_relerr: 1.0e-08
-  nex: 2
+    - 0.0
+    amplitude_file2:
+    - 0.00046303103399882424
+    - 0.0002125353071021372
+    - -0.0005702245295231166
+    amplitude_file3:
+    - 0.0
+    - 0.0
+    - 0.0
+  - name: S4
+    fix: false
+    energy: 0.28811866714926354
+    strength: 0.11193712529136579
+    amplitude_file1:
+    - 0.07097757691527752
+    - 0.0005431075201883786
+    - -0.05321127806173298
+    amplitude_file2:
+    - 0.000575677796754473
+    - -1.5832214720379535e-05
+    - -0.0003914606735876383
+    amplitude_file3:
+    - -0.05324622531089253
+    - -0.00036917989698018714
+    - 0.04100902073196452
