Bugfix 	modified:   eval.yaml 	modified:   src/dipole.py 	modified:   src/eval.py 	modified:   src/inout.py 	modified:   src/specFit.py

--- a/eval.yaml
+++ b/eval.yaml
@@ -1,14 +1,14 @@
 DESCRIPTION: '>'
 DIPOLE:
-- dipole_k100.dat
-- dipole_k010.dat
-- dipole_k001.dat
-#- dipole.dat
+#- dipole_k100.dat
+#- dipole_k010.dat
+#- dipole_k001.dat
+- dipole.dat
 EXCIT: laser_profile.dat
 OPT:
   FitSpectrum:
     fit: true
-    fit_guess: true
+    fit_guess: false
     guess_thres: 0.1
     fit_relerr_crit: 0.1 #this is only for the single fits NOT trace
     fit_max_iter: 30
@@ -27,69 +27,61 @@ OPT:
     pade_thin: 0
     pade_wmax: 0.6
 SPEC:
-  nex: 4
+  nex: 8
   excitations:
   - name: S1
     fix: false
-    energy: 0.22604561723950442
-    strength: 0.016855504240234572
-    amplitude_file1:
-    - 0.003275404051270611
-    - 0.0003950728917067939
-    - 0.006475085778662061
-    amplitude_file2:
-    - 0.00038641993586937347
-    - 5.1149609515033444e-05
-    - 0.0008120485934047347
-    amplitude_file3:
-    - 0.006484755627272246
-    - 0.0008014857128177774
-    - 0.013607844637491878
+    energy: 0.2305184755040197
+    amplitudes_file1:
+    - 0.005106378852719367
+    - 0.0019510720669610002
+    - 0.015929659042891123
   - name: S2
     fix: false
-    energy: 0.2432180738100489
-    strength: 0.279089352293315
-    amplitude_file1:
-    - 0.09973636019763744
-    - 0.0036100696292732676
-    - 0.133762037609501
-    amplitude_file2:
-    - 0.003646927367537331
-    - 0.00013238971665478528
-    - 0.004868404473165539
-    amplitude_file3:
-    - 0.1337167377451227
-    - 0.004889546185522697
-    - 0.1789755495925394
+    energy: 0.24359423902521476
+    amplitudes_file1:
+    - 0.0434008476150915
+    - -0.00011273213699512926
+    - 0.043289099026472794
   - name: S3
     fix: false
-    energy: 0.2481291430301331
-    strength: 0.00408490507065865
-    amplitude_file1:
-    - 0.0
-    - 0.0
-    - 0.0
-    amplitude_file2:
-    - 0.00046303103399882424
-    - 0.0002125353071021372
-    - -0.0005702245295231166
-    amplitude_file3:
-    - 0.0
-    - 0.0
-    - 0.0
+    energy: 0.2516981373695945
+    amplitudes_file1:
+    - 0.026405087411874466
+    - 0.0015815860010799617
+    - 0.0008832603391098822
   - name: S4
     fix: false
-    energy: 0.28811866714926354
-    strength: 0.11193712529136579
-    amplitude_file1:
-    - 0.07097757691527752
-    - 0.0005431075201883786
-    - -0.05321127806173298
-    amplitude_file2:
-    - 0.000575677796754473
-    - -1.5832214720379535e-05
-    - -0.0003914606735876383
-    amplitude_file3:
-    - -0.05324622531089253
-    - -0.00036917989698018714
-    - 0.04100902073196452
+    energy: 0.280365998183592
+    amplitudes_file1:
+    - 0.07992609307601393
+    - 0.0006615178673014838
+    - 0.02094416443295658
+  - name: S5
+    fix: false
+    energy: 0.28525897283079305
+    amplitudes_file1:
+    - 0.24390379245470847
+    - -0.012032052987833499
+    - -0.045947974640136495
+  - name: S6
+    fix: false
+    energy: 0.29548399832903366
+    amplitudes_file1:
+    - 0.05744555792637464
+    - -0.001330631217492255
+    - -0.037840197788136416
+  - name: S7
+    fix: false
+    energy: 0.3334250004696935
+    amplitudes_file1:
+    - 0.050598667752192204
+    - 0.0041581967500716
+    - -0.015037372197026413
+  - name: S8
+    fix: false
+    energy: 0.3158274677425553
+    amplitudes_file1:
+    - 0.0158478513176244
+    - -0.002283285752277302
+    - -0.013052544239155068
