Added calculation of osciStrength for multifit & BugFix. 	modified:   src/config.py 	modified:   src/eval.py 	modified:   src/handleTrace.py 	modified:   src/inout.py 	modified:   src/specFit.py 	modified:   src/specGuess.py

--- a/eval.yaml
+++ b/eval.yaml
@@ -7,11 +7,11 @@ DIPOLE:
 EXCIT: laser_profile.dat
 OPT:
   FitSpectrum:
-    fit: false
+    fit: true
     fit_guess: false
     guess_thres: 0.1
-    fit_relerr_crit: 0.1 #this is only for the single fits NOT trace
-    fit_max_iter: 30
+    fit_relerr_crit: 0.05 #this is only for the single fits NOT trace
+    fit_max_iter: 10
     fit_range:
     - 0.2
     - 0.35
@@ -21,67 +21,83 @@ OPT:
     smooth: 0
     window: 0
   PadeApprox:
-    pade: true
+    pade: false
     pade_dw: 1.0e-05
     pade_smooth: 1.0e-07
     pade_thin: 0
     pade_wmax: 0.6
 SPEC:
-  nex: 8
+  nex: 9
   excitations:
   - name: S1
     fix: false
-    energy: 0.2305184755040197
+    energy: 0.19963243158775484
+    strength: 2.150807732772066
     amplitudes_file1:
-    - 0.005106378852719367
-    - 0.0019510720669610002
-    - 0.015929659042891123
+    - 0.011392818974502263
+    - -0.0006506005036742621
+    - -0.011691369470100904
   - name: S2
     fix: false
-    energy: 0.24359423902521476
+    energy: 0.23053025502600127
+    strength: 3.372072433111606
     amplitudes_file1:
-    - 0.0434008476150915
-    - -0.00011273213699512926
-    - 0.043289099026472794
+    - 0.0051138797175881365
+    - 0.0019502865831502938
+    - 0.015929902356269097
   - name: S3
     fix: false
-    energy: 0.2516981373695945
+    energy: 0.2435934480046155
+    strength: 2.009664625023616
     amplitudes_file1:
-    - 0.026405087411874466
-    - 0.0015815860010799617
-    - 0.0008832603391098822
+    - 0.04323327316322388
+    - -0.00010515656136339656
+    - 0.043439404415744474
   - name: S4
     fix: false
-    energy: 0.280365998183592
+    energy: 0.25169074227745764
+    strength: 1.337553079591624
     amplitudes_file1:
-    - 0.07992609307601393
-    - 0.0006615178673014838
-    - 0.02094416443295658
+    - 0.026448910882034566
+    - 0.0015804493670995554
+    - 0.000857745694018013
   - name: S5
     fix: false
-    energy: 0.28525897283079305
+    energy: 0.28036660932281404
+    strength: 1.4503998420326771
     amplitudes_file1:
-    - 0.24390379245470847
-    - -0.012032052987833499
-    - -0.045947974640136495
+    - 0.07981371970078958
+    - 0.0006676842226542562
+    - 0.021030833435105287
   - name: S6
     fix: false
-    energy: 0.29548399832903366
+    energy: 0.285258143688419
+    strength: 1.515556945263511
     amplitudes_file1:
-    - 0.05744555792637464
-    - -0.001330631217492255
-    - -0.037840197788136416
+    - 0.24390359547802515
+    - -0.012032642921153433
+    - -0.045956742585523416
   - name: S7
     fix: false
-    energy: 0.3334250004696935
+    energy: 0.29548636023015623
+    strength: 1.733315991610565
     amplitudes_file1:
-    - 0.050598667752192204
-    - 0.0041581967500716
-    - -0.015037372197026413
+    - 0.057374424906580346
+    - -0.001326356927781466
+    - -0.03775422441766032
   - name: S8
     fix: false
-    energy: 0.3158274677425553
+    energy: 0.315818328116712
+    strength: 2.153810741693652
     amplitudes_file1:
-    - 0.0158478513176244
-    - -0.002283285752277302
-    - -0.013052544239155068
+    - 0.01580754254577453
+    - -0.0022784001132619106
+    - -0.013018346217306706
+  - name: S9
+    fix: false
+    energy: 0.33342284236972736
+    strength: 1.3682736497090044
+    amplitudes_file1:
+    - 0.05068003611647109
+    - 0.004152977224308602
+    - -0.01512546260260502
