Boost fitting (imag part, fixed phase) etc.
 - Boost excitation: Fix and fit only imag part and fix phase at 0.
 - Automatic PADE smoothing
 - Experimental tmod fit parameter to slightly adjust the effective propagation time (disabled by default and not useful so far)
 - Plot fitted excitation spectrum
 - Catch Value error of external spectrum interpolation if requested energy is out of range
 - Removed some old files that are not used anymore

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 src/__pycache__/
 src/build/
 src/dist/
-Osci
-PW
-spectrum
-spectrum_3
-dipole.dat
-dipole_k100.dat
-dipole_k010.dat
-dipole_k001.dat
-PADE
-test/
+test/*/*ft*.dat
+test/*/*pw*.dat
+test/*/*pade*.dat
+test/*/*fit*.dat
+*~
