--- a/test/Na4_boost/eval.yaml
+++ b/test/Na4_boost/eval.yaml
@@ -11,11 +11,11 @@ OPT:
     calc: false                     # Turn Pade Approximation on/off
     wmax: 0.6                       # Maximum energy for Pade Approximation in Ry
     dw: 1.0e-05                     # Step of Pade Approximation
-    smooth: 0.004455749593509885    # Smooth for Pade Approximation
+    smooth: 0.0                     # Smooth for Pade Approximation
     thin: 0                         # Only keep every 2^n data point
   Fit:
     calc: true                      # Turn fit on/off
-    skipfirst: false                # Skip first fit of existing excitations
+    skipfirst: true                 # Skip first fit of existing excitations
     guess: false                    # Turn guess for fit via Pade Approximation on/off
     plot_result: false              # If True: The fit results are plotted without fitting again
     gnuplot_spectrum: false         # If True: A gnuplot script for plotting the resulting spectrum is created.
@@ -25,7 +25,7 @@ OPT:
                                     #   fit_guess == True).
     relerr_crit: 0.01               # Criterium for relative error between fit and data (only relevant, if 
                                     #   fit_guess == True).
-    max_excit: 8                    # Maximum numer of iterations used to reach relative error between fit and 
+    max_excit: 25                   # Maximum numer of iterations used to reach relative error between fit and 
                                     #   data (only relevant, if fit_guess == True)
     relspacing_lines: 0.01          # Threshold for relative error between two lines which should be identified 
                                     #   as one in fit of trace (only relevant, if number of dipole files == 3).
@@ -34,115 +34,403 @@ OPT:
     - 0.40
 EXT: {}
 SPEC:
-- name: S0
+- name: Y4
   fix: false
-  energy: 0.13183779905637033
+  energy: -33.184433887932656
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - -0.0021681996032151094
-    - 0.039764198061582615
-    - 6.988569440671082
+  - - -38.28696105450142
+    - 24.907414155241465
+    - 21.19394981751523
   dipole:
-  - -0.0021681996032151094
-  - 0.039764198061582615
-  - 6.988569440671082
-  strength: 1.0731967904984803
+  - -38.28696105450142
+  - 24.907414155241465
+  - 21.19394981751523
+  strength: -14022.935244108929
   strengths:
-  - 1.0731967904984803
-- name: S1
+  - -14022.935244108929
+- name: Z4
   fix: false
-  energy: 0.15429442742045188
+  energy: -32.13383100323201
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - -0.0017917960444101798
-    - -0.05155544467598274
-    - 1.7429263965211226
+  - - -8.01131304317537
+    - -20.502125080371773
+    - -40.01367067194695
   dipole:
-  - -0.0017917960444101798
-  - -0.05155544467598274
-  - 1.7429263965211226
-  strength: 0.07818750783618732
+  - -8.01131304317537
+  - -20.502125080371773
+  - -40.01367067194695
+  strength: -11169.784514201858
   strengths:
-  - 0.07818750783618732
+  - -11169.784514201858
 - name: S2
   fix: false
-  energy: 0.1647778851278988
+  energy: 0.12530390017828394
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - 2.1013366604914996
-    - 0.04416906238106792
-    - -0.04661603241612594
+  - - 0.005640766877313503
+    - 0.11735005424055645
+    - 0.004950640159975208
   dipole:
-  - 2.1013366604914996
-  - 0.04416906238106792
-  - -0.04661603241612594
-  strength: 0.12137922734792188
+  - 0.005640766877313503
+  - 0.11735005424055645
+  - 0.004950640159975208
+  strength: 0.0002887704046294032
   strengths:
-  - 0.12137922734792188
+  - 0.0002887704046294032
 - name: S3
   fix: false
-  energy: 0.19340852779524131
+  energy: 0.12693959770292998
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - -0.00644736348302383
-    - 5.327816825271677
-    - -0.013563195106859927
+  - - -0.0012564646405656705
+    - -0.03695752299987473
+    - 0.0864017596685897
   dipole:
-  - -0.00644736348302383
-  - 5.327816825271677
-  - -0.013563195106859927
-  strength: 0.9150111564595008
+  - -0.0012564646405656705
+  - -0.03695752299987473
+  - 0.0864017596685897
+  strength: 0.00018686992459310972
   strengths:
-  - 0.9150111564595008
+  - 0.00018686992459310972
 - name: S4
   fix: false
-  energy: 0.21822674025253314
+  energy: 0.1275226128452602
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - 4.085713922079381
-    - -0.013471067616503152
-    - -0.012728472701774227
+  - - -0.18245795283017877
+    - -0.6979287489893476
+    - 0.9144311147434343
   dipole:
-  - 4.085713922079381
-  - -0.013471067616503152
-  - -0.012728472701774227
-  strength: 0.6071577741229425
+  - -0.18245795283017877
+  - -0.6979287489893476
+  - 0.9144311147434343
+  strength: 0.02883243145792165
   strengths:
-  - 0.6071577741229425
+  - 0.02883243145792165
 - name: S5
   fix: false
-  energy: 0.24264368429973282
+  energy: 0.12960791284621298
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - 0.009505970287080506
-    - 2.2206075212220635
-    - -0.01329920568572835
+  - - 0.02097880826266074
+    - 0.031236391877016035
+    - 0.01650936644524638
   dipole:
-  - 0.009505970287080506
-  - 2.2206075212220635
-  - -0.01329920568572835
-  strength: 0.19942742852858109
+  - 0.02097880826266074
+  - 0.031236391877016035
+  - 0.01650936644524638
+  strength: 3.647127253811296e-05
   strengths:
-  - 0.19942742852858109
+  - 3.647127253811296e-05
 - name: S6
   fix: false
-  energy: 0.25507008921666435
+  energy: 0.13056436164760513
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - 2.6781189011200732
-    - 0.003866410327144188
-    - 0.012502196655202396
+  - - -0.017188012677953994
+    - 0.023510166146915056
+    - 0.0032944882780052143
   dipole:
-  - 2.6781189011200732
-  - 0.003866410327144188
-  - 0.012502196655202396
-  strength: 0.3049147000854312
+  - -0.017188012677953994
+  - 0.023510166146915056
+  - 0.0032944882780052143
+  strength: 1.8692667798434636e-05
   strengths:
-  - 0.3049147000854312
+  - 1.8692667798434636e-05
+- name: S7
+  fix: false
+  energy: 0.1305742896493145
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - -0.089025796203333
+    - 0.08570075536127729
+    - 0.0008862961515205493
+  dipole:
+  - -0.089025796203333
+  - 0.08570075536127729
+  - 0.0008862961515205493
+  strength: 0.0003323332725216537
+  strengths:
+  - 0.0003323332725216537
+- name: Y1
+  fix: false
+  energy: 0.13071663311644707
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 0.0037939542298827964
+    - 0.1316523547567928
+    - 2.6993792558055922
+  dipole:
+  - 0.0037939542298827964
+  - 0.1316523547567928
+  - 2.6993792558055922
+  strength: 0.159125608033193
+  strengths:
+  - 0.159125608033193
+- name: Z1
+  fix: false
+  energy: 0.1320084389522075
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - -0.0035614566656066143
+    - -0.004746762112293364
+    - 6.5806207501364575
+  dipole:
+  - -0.0035614566656066143
+  - -0.004746762112293364
+  - 6.5806207501364575
+  strength: 0.9527622103842472
+  strengths:
+  - 0.9527622103842472
+- name: S10
+  fix: false
+  energy: 0.1349479591272659
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 0.023937722711662147
+    - 0.0345305505743535
+    - 0.507248591479527
+  dipole:
+  - 0.023937722711662147
+  - 0.0345305505743535
+  - 0.507248591479527
+  strength: 0.005826749400761089
+  strengths:
+  - 0.005826749400761089
+- name: Z2
+  fix: false
+  energy: 0.1473953266564629
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 0.11509096225903682
+    - 0.023823502977796344
+    - -0.2680776792236115
+  dipole:
+  - 0.11509096225903682
+  - 0.023823502977796344
+  - -0.2680776792236115
+  strength: 0.0021047839165480348
+  strengths:
+  - 0.0021047839165480348
+- name: Z3
+  fix: false
+  energy: 0.1542150495372371
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 0.004227452450458886
+    - 0.006852334501904123
+    - 1.6662849636546284
+  dipole:
+  - 0.004227452450458886
+  - 0.006852334501904123
+  - 1.6662849636546284
+  strength: 0.07136482378270964
+  strengths:
+  - 0.07136482378270964
+- name: X1
+  fix: false
+  energy: 0.1647606743104131
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 2.113401545764729
+    - -0.0066947123815385675
+    - -0.009782713932831845
+  dipole:
+  - 2.113401545764729
+  - -0.0066947123815385675
+  - -0.009782713932831845
+  strength: 0.1226535196087486
+  strengths:
+  - 0.1226535196087486
+- name: Y2b
+  fix: false
+  energy: 0.1924368325272153
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - -0.004315080309272983
+    - 3.0895901314821357
+    - 0.03872224944613569
+  dipole:
+  - -0.004315080309272983
+  - 3.0895901314821357
+  - 0.03872224944613569
+  strength: 0.30620180637849975
+  strengths:
+  - 0.30620180637849975
+- name: Y2a
+  fix: false
+  energy: 0.19382335212033278
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 0.0003370038118729587
+    - 4.567503188800396
+    - -0.02943809406641275
+  dipole:
+  - 0.0003370038118729587
+  - 4.567503188800396
+  - -0.02943809406641275
+  strength: 0.673954551685345
+  strengths:
+  - 0.673954551685345
+- name: X2
+  fix: false
+  energy: 0.2182292658334797
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 4.077547989171095
+    - -0.0026583357821217935
+    - 0.0006915467839629565
+  dipole:
+  - 4.077547989171095
+  - -0.0026583357821217935
+  - 0.0006915467839629565
+  strength: 0.6047280315186243
+  strengths:
+  - 0.6047280315186243
+- name: Z5
+  fix: false
+  energy: 0.2243775262414028
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 0.02471497927325026
+    - -0.006398698400532063
+    - 1.0700051854794286
+  dipole:
+  - 0.02471497927325026
+  - -0.006398698400532063
+  - 1.0700051854794286
+  strength: 0.04283976050592848
+  strengths:
+  - 0.04283976050592848
+- name: Y3
+  fix: false
+  energy: 0.2426841081938462
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 0.010718918947847258
+    - 2.2121547563027315
+    - 0.0002937925233633231
+  dipole:
+  - 0.010718918947847258
+  - 2.2121547563027315
+  - 0.0002937925233633231
+  strength: 0.1979389687985584
+  strengths:
+  - 0.1979389687985584
+- name: X3
+  fix: false
+  energy: 0.25506976767045414
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 2.684423065513128
+    - 0.007004079908711896
+    - 0.03003460043746046
+  dipole:
+  - 2.684423065513128
+  - 0.007004079908711896
+  - 0.03003460043746046
+  strength: 0.3063846324942185
+  strengths:
+  - 0.3063846324942185
+- name: XYZ
+  fix: false
+  energy: 0.31790284321844936
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - -0.10773752713236905
+    - 0.8417397647604943
+    - 0.009024554011108027
+  dipole:
+  - -0.10773752713236905
+  - 0.8417397647604943
+  - 0.009024554011108027
+  strength: 0.03815971410250551
+  strengths:
+  - 0.03815971410250551
+- name: X5
+  fix: false
+  energy: 0.33347453954963924
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 0.965959661511583
+    - -0.04181636400802754
+    - -0.011213290442994303
+  dipole:
+  - 0.965959661511583
+  - -0.04181636400802754
+  - -0.011213290442994303
+  strength: 0.05196380428485221
+  strengths:
+  - 0.05196380428485221
+- name: XYZ2
+  fix: false
+  energy: 0.33644558517409806
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 0.13087892541571677
+    - 0.5337481793358458
+    - 0.006759217199421655
+  dipole:
+  - 0.13087892541571677
+  - 0.5337481793358458
+  - 0.006759217199421655
+  strength: 0.01693790994728377
+  strengths:
+  - 0.01693790994728377
+- name: XYZ3
+  fix: false
+  energy: 0.40722381152350523
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - 0.9939651996329316
+    - 0.12679154297105114
+    - -0.1909916505379834
+  dipole:
+  - 0.9939651996329316
+  - 0.12679154297105114
+  - -0.1909916505379834
+  strength: 0.0706208025344794
+  strengths:
+  - 0.0706208025344794
+- name: Y5
+  fix: false
+  energy: 16.86555635800622
+  phase: 0.0
+  tmod: 1.0
+  dipoles:
+  - - -283.31545767023204
+    - 83.15480836767182
+    - 234.40638124226123
+  dipole:
+  - -283.31545767023204
+  - 83.15480836767182
+  - 234.40638124226123
+  strength: 399513.329274708
+  strengths:
+  - 399513.329274708
