Restrict energy fit range to about +/- 1% of guess (my be configurable in the future) to make use of the better line guess

--- a/test/Na4_boost/eval1.yaml
+++ b/test/Na4_boost/eval1.yaml
@@ -15,7 +15,7 @@ OPT:
     thin: 0                         # Only keep every 2^n data point
   Fit:
     calc: true                      # Turn fit on/off
-    skipfirst: false                # Skip first fit of existing excitations
+    skipfirst: true                 # Skip first fit of existing excitations
     guess: false                    # Turn guess for fit via Pade Approximation on/off
     plot_result: false              # If True: The fit results are plotted without fitting again
     gnuplot_spectrum: false         # If True: A gnuplot script for plotting the resulting spectrum is created.
@@ -25,7 +25,7 @@ OPT:
                                     #   fit_guess == True).
     relerr_crit: 0.01               # Criterium for relative error between fit and data (only relevant, if 
                                     #   fit_guess == True).
-    max_excit: 8                    # Maximum numer of iterations used to reach relative error between fit and 
+    max_excit: 9                    # Maximum numer of iterations used to reach relative error between fit and 
                                     #   data (only relevant, if fit_guess == True)
     relspacing_lines: 0.01          # Threshold for relative error between two lines which should be identified 
                                     #   as one in fit of trace (only relevant, if number of dipole files == 3).
@@ -34,185 +34,131 @@ OPT:
     - 0.40
 EXT: {}
 SPEC:
-- name: Z1
+- name: S0
   fix: false
-  energy: 0.1318394221533339
+  energy: 0.13183944295842107
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - -0.002048340828511486
-    - 0.033825117396788444
-    - 6.995146366969129
+  - - -0.0020482477951300018
+    - 0.03382128505223113
+    - 6.995148096439675
   dipole:
-  - -0.002048340828511486
-  - 0.033825117396788444
-  - 6.995146366969129
-  strength: 1.0752212641070515
+  - -0.0020482477951300018
+  - 0.03382128505223113
+  - 6.995148096439675
+  strength: 1.075221959739075
   strengths:
-  - 1.0752212641070515
-- name: Z2
+  - 1.075221959739075
+- name: S1
   fix: false
-  energy: 0.14229072441947133
+  energy: 0.14229143519143564
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - 0.021706525291479883
-    - -0.05461516596347264
-    - 0.5839107168315638
+  - - 0.021710465865062988
+    - -0.054541591103674764
+    - 0.583866564979081
   dipole:
-  - 0.021706525291479883
-  - -0.05461516596347264
-  - 0.5839107168315638
-  strength: 0.008167623109423499
+  - 0.021710465865062988
+  - -0.054541591103674764
+  - 0.583866564979081
+  strength: 0.008166254757541598
   strengths:
-  - 0.008167623109423499
-- name: Z3
+  - 0.008166254757541598
+- name: S2
   fix: false
-  energy: 0.1542578433335092
+  energy: 0.15425781614478468
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - 0.011382982582536626
-    - -0.019658315493390564
-    - 1.7198108452455017
+  - - 0.011383981014041618
+    - -0.019630413034229716
+    - 1.7197963745185376
   dipole:
-  - 0.011382982582536626
-  - -0.019658315493390564
-  - 1.7198108452455017
-  strength: 0.07605593920436005
+  - 0.011383981014041618
+  - -0.019630413034229716
+  - 1.7197963745185376
+  strength: 0.07605461853770988
   strengths:
-  - 0.07605593920436005
-- name: X1
+  - 0.07605461853770988
+- name: S3
   fix: false
-  energy: 0.16476614613722915
+  energy: 0.16476615374052947
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - 2.0991873914766583
-    - 0.045657044704048
-    - -0.03655528988699743
+  - - 2.099186751474048
+    - 0.0456708241669804
+    - -0.03656787372351279
   dipole:
-  - 2.0991873914766583
-  - 0.045657044704048
-  - -0.03655528988699743
-  strength: 0.12110335246307319
+  - 2.099186751474048
+  - 0.0456708241669804
+  - -0.03656787372351279
+  strength: 0.12110334409165645
   strengths:
-  - 0.12110335246307319
-- name: Y2
+  - 0.12110334409165645
+- name: S4
   fix: false
-  energy: 0.193406073141619
+  energy: 0.19340613460290076
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - -0.0035979862804635322
-    - 5.31952667297316
-    - -0.008171007291423348
+  - - -0.003598351708871225
+    - 5.319526327264925
+    - -0.008171137325286165
   dipole:
-  - -0.0035979862804635322
-  - 5.31952667297316
-  - -0.008171007291423348
-  strength: 0.9121495787996153
+  - -0.003598351708871225
+  - 5.319526327264925
+  - -0.008171137325286165
+  strength: 0.9121497502608507
   strengths:
-  - 0.9121495787996153
-- name: X2
+  - 0.9121497502608507
+- name: S5
   fix: false
-  energy: 0.2182275159122385
+  energy: 0.21822751861722275
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - 4.089445483817882
-    - -0.025381891768656482
-    - -0.003759413761103918
+  - - 4.089438547949721
+    - -0.025368193328206882
+    - -0.003759677867854181
   dipole:
-  - 4.089445483817882
-  - -0.025381891768656482
-  - -0.003759413761103918
-  strength: 0.6082809306397028
+  - 4.089438547949721
+  - -0.025368193328206882
+  - -0.003759677867854181
+  strength: 0.6082788497104078
   strengths:
-  - 0.6082809306397028
-- name: Y3
+  - 0.6082788497104078
+- name: S6
   fix: false
-  energy: 0.24264261925814504
+  energy: 0.24264264348750605
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - 0.0030926324123810023
-    - 2.210712256059358
-    - -0.010524837260458346
+  - - 0.0030917509228265464
+    - 2.210718985583403
+    - -0.01052393177445646
   dipole:
-  - 0.0030926324123810023
-  - 2.210712256059358
-  - -0.010524837260458346
-  strength: 0.19764733654036945
+  - 0.0030917509228265464
+  - 2.210718985583403
+  - -0.01052393177445646
+  strength: 0.1976485585554846
   strengths:
-  - 0.19764733654036945
-- name: X3
+  - 0.1976485585554846
+- name: S7
   fix: false
-  energy: 0.2550688901292687
+  energy: 0.2550688993655624
   phase: 0.0
   tmod: 1.0
   dipoles:
-  - - 2.694384069266793
-    - -0.015429631343575485
-    - 0.025078348746120176
+  - - 2.694379060017901
+    - -0.015418582185501207
+    - 0.025077907410993763
   dipole:
-  - 2.694384069266793
-  - -0.015429631343575485
-  - 0.025078348746120176
-  strength: 0.3086576952970557
+  - 2.694379060017901
+  - -0.015418582185501207
+  - 0.025077907410993763
+  strength: 0.3086565435025846
   strengths:
-  - 0.3086576952970557
-- name:   Z4
-  energy: 0.20
-  dipoles:
-  - - 0.00001
-    - 0.00001
-    - 0.01
-- name:   Z5
-  energy: 0.22
-  dipoles:
-  - - 0.00001
-    - 0.00001
-    - 0.01
-- name:   Y1
-  energy: 0.130
-  dipoles:
-  - - 0.00001
-    - 0.01
-    - 0.00001
-- name:   Y4
-  energy: 0.304
-  dipoles:
-  - - 0.00001
-    - 0.01
-    - 0.00001
-- name:   Y5
-  energy: 0.317
-  dipoles:
-  - - 0.00001
-    - 0.01
-    - 0.00001
-- name:   X4
-  energy: 0.300
-  dipoles:
-  - - 0.01
-    - 0.00001
-    - 0.00001
-- name:   X5
-  energy: 0.334
-  dipoles:
-  - - 0.01
-    - 0.00001
-    - 0.00001
-- name:   X6
-  energy: 0.347
-  dipoles:
-  - - 0.01
-    - 0.00001
-    - 0.00001
-- name:   X7
-  energy: 0.385
-  dipoles:
-  - - 0.01
-    - 0.00001
-    - 0.00001
+  - 0.3086565435025846
